# tbot

./: Cargo.toml  Makefile  README.md  rustfmt.toml
docker/: docker-compose.yaml
ipm/: Cargo.toml  README.md
ipm/configs/: default.yaml  development.yaml  production.yaml
ipm/examples/: README.md  get_order_book.rs  get_trade.rs
ipm/src/: args.rs  convert.rs  main.rs  receiver.rs  settings.rs
ipm/src/client/: grpc.rs  mod.rs
ipm/src/client/ws/: candle.rs  emulator.rs  mod.rs  order_book.rs  reader.rs
ipm/src/domain/: mod.rs  order_book.rs  trade.rs
ipm/src/proto/: convert.rs  mod.rs
ipm/src/server/: grpc.rs
pr/: Cargo.toml  README.md  build.rs  sqlx-data.json
pr/configs/: default.yaml
pr/migrations/: 20210505180307_create_trade_table.sql  20210505181224_create_order_book_table.sql
pr/src/: args.rs  main.rs  settings.rs
pr/src/db/: mod.rs  queries.rs  reading.rs  storing.rs
pr/src/domain/: common.rs  mod.rs  order_book.rs  trade.rs
pr/src/server/: grpc.rs  mod.rs
pr/src/server/services/: mod.rs  price_storage.rs  stream.rs
pr/src/server/services/proto/: convert.rs  mod.rs  utils.rs
proto/: incoming.proto  storage.proto
