[package]
name = "ipm"
version = "0.1.0"
authors = ["vchugreev <vchugreev@sfxdx.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13"
tokio-tungstenite = { version = "0.14", features = ["native-tls"] }
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.11"
log = "0.4"
flexi_logger = "0.18"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
ctrlc = { version = "3.1", features = ["termination"] }
clap = "3.0.0-beta.2"
tonic = "0.5"
prost = "0.8"
futures = { version = "0.3", default-features = false, features = ["alloc", "executor"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.6"
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
rand = "0.8"
paste = "1.0"

[build-dependencies]
tonic-build = "0.5"